hphp/test/zend/bad/ext-date/DateTime_days-fall-type2-type3.php
<?php

require 'examine_diff.inc';
define('PHPT_DATETIME_SHOW', PHPT_DATETIME_SHOW_DAYS);
require 'DateTime_data-fall-type2-type3.inc';

?>